tests/parser/var_err3.mtp
(* variable section start *)

(* missing colon*)
var test integer;

begin

end
.